# checkstyle-pre-commit-hook

./: .gitignore  .pre-commit-hooks.yaml  pyproject.toml
feedly/: checkstyle.py
