[tool.poetry]
name = "checkstyle-pre-commit-hook"
version = "0.1.0"
description = "checkstyle pre commit hook"
authors = []
packages = [{ include = "feedly" }]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
feedly-checkstyle = 'feedly.checkstyle:run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

